--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "scripts": {
         "test": "NODE_OPTIONS='--experimental-vm-modules' jest"
     },
-    "dependencies": {
-        "ts-node": "^10.x",
-        "typescript": "^4.x"
-    },
+    "dependencies": {},
     "devDependencies": {
+        "ts-node": "^10.x",
+        "typescript": "^4.x",
         "@types/jest": "^29.5.14",
         "jest": "^29.7.0",
         "node-fetch": "^3.3.2",
