--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "target": "ESNext",
       "esModuleInterop": true,
       "moduleResolution": "nodenext",
+      "outDir": "./dist",
       // ... other options
     }
   }
