--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
     "name": "segreg",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "Piecewise regression in JavaScript",
     "type": "module",
     "scripts": {
         "build": "tsc",
         "test": "NODE_OPTIONS='--experimental-vm-modules' jest"
     },
+    "dependencies": {
+        "node-fetch": "^3.3.2"
+    },
     "devDependencies": {
-        "ts-node": "^10.x",
-        "typescript": "^4.x",
         "@types/jest": "^29.5.14",
         "jest": "^29.7.0",
-        "node-fetch": "^3.3.2",
         "seedrandom": "^3.0.5",
-        "ts-jest": "^29.2.5"
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.x",
+        "typescript": "^4.x"
     },
     "main": "dist/piecewise.js",
     "directories": {
